# TheGreenWay

./: CONTRIBUTING.md  Makefile.am  TODO  configure.ac
contrib/: README.md  bitcoin-tx.bash-completion  gitian-build.sh  tidy_datadir.sh
depends/: Makefile  README.md  config.guess  config.sub  funcs.mk
doc/: Doxyfile.in  NamecoinBugs.txt  README.md  REST-interface.md  bips.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  gitian-building.md  init.md  release-notes.md  release-process.md  translation_process.md  zmq.md  (+1 more)
src/: Makefile.am  (+123 more)
src/secp256k1/: Makefile.am  configure.ac
src/secp256k1/build-aux/m4/: bitcoin_secp.m4
src/secp256k1/contrib/: lax_der_privatekey_parsing.h
src/secp256k1/include/: secp256k1.h  secp256k1_musig.h  secp256k1_schnorrsig.h
src/secp256k1/sage/: group_prover.sage  weierstrass_prover.sage
src/secp256k1/src/: bench_internal.c  ecdsa.h  eckey.h  ecmult_const_impl.h  ecmult_gen.h  ecmult_impl.h  field.h  field_5x52.h  field_5x52_asm_impl.h  field_5x52_impl.h  gen_context.c  group_impl.h  num.h  num_gmp.h  scalar_4x64.h  scalar_4x64_impl.h  scalar_8x32.h  scalar_8x32_impl.h  scalar_impl.h  scalar_low_impl.h  scratch_impl.h  secp256k1.c  testrand.h  tests.c  tests_exhaustive.c
src/secp256k1/src/asm/: field_10x26_arm.s
src/secp256k1/src/modules/ecdh/: Makefile.am.include
src/secp256k1/src/modules/musig/: example.c  main_impl.h  tests_impl.h
src/secp256k1/src/modules/recovery/: tests_impl.h
src/secp256k1/src/modules/schnorrsig/: main_impl.h  tests_impl.h
(+836 files in other folders)
